rearrangerement 2.0