@@ -1,5 +1,4 @@
 javac --module-path "/Users/paul/Desktop/javafx-sdk-19/lib/" --add-modules javafx.controls,javafx.fxml,javafx.media Were/Infrastructure/*.java
-javac --module-path "/Users/paul/Desktop/javafx-sdk-19/lib/" --add-modules javafx.controls,javafx.fxml,javafx.media Were/Func/*.java
 javac --module-path "/Users/paul/Desktop/javafx-sdk-19/lib/" --add-modules javafx.controls,javafx.fxml,javafx.media Were/Event/*.java
 javac --module-path "/Users/paul/Desktop/javafx-sdk-19/lib/" --add-modules javafx.controls,javafx.fxml,javafx.media Were/Runner/*.java
 javac --module-path "/Users/paul/Desktop/javafx-sdk-19/lib/" --add-modules javafx.controls,javafx.fxml,javafx.media Were/MultiMedia/*.java
