@@ -1,4 +1,5 @@
 javac --module-path "/Users/paul/Desktop/javafx-sdk-19/lib/" --add-modules javafx.controls,javafx.fxml,javafx.media server/runner/*.java 
 javac --module-path "/Users/paul/Desktop/javafx-sdk-19/lib/" --add-modules javafx.controls,javafx.fxml,javafx.media server/sub/*.java 
+javac --module-path "/Users/paul/Desktop/javafx-sdk-19/lib/" --add-modules javafx.controls,javafx.fxml,javafx.media server/Multimedia/*.java 
 javac --module-path "/Users/paul/Desktop/javafx-sdk-19/lib/" --add-modules javafx.controls,javafx.fxml,javafx.media server/main/*.java 
 java --module-path "/Users/paul/Desktop/javafx-sdk-19/lib/" --add-modules javafx.controls,javafx.fxml,javafx.media server/main/RunServer
